Mint implementation in progress